Bug 39915 - Defining a named range is case sensitive, but entering it in a formula is not
Summary: Defining a named range is case sensitive, but entering it in a formula is not
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
3.4.2 release
Hardware: Other macOS (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:3.5 target:3.4.3
Keywords:
Depends on:
Blocks:
 
Reported: 2011-08-07 21:19 UTC by James
Modified: 2011-08-08 09:27 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description James 2011-08-07 21:19:18 UTC
Open a new blank spreadsheet.
Define the named range xxyy
Define the named range xxYy. You can do this because you can move the cursor back and edit the interior letters of a word without them being autocorrected.

If you then enter the formula "=xxyy" in a cell, it is ambiguous which of those definitions you'll get. In practice, it's the lexically earlier one, in this case xxYy.

It seems to me that the check whether a new named range conflicts with an existing one should be done case-insensitively (though naturally the name itself should remain case-sensitive).
Comment 1 Markus Mohrhard 2011-08-08 09:27:14 UTC
please don't add blockers to bugs as long as they are unrelated and even if they are this is a bad idea