fix for fdo#39915: defining named ranges should be case insensitive